# testing-github-action

./: pyproject.toml
.github/workflows/: publish.yaml
example-package/: app.py
