[tool.poetry]
name = "code-specialist-example-package"
version = "1.0.4"
description = "Test package"
authors = ["Yannic Schröer"]
packages = [{include = "example_package"}]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
