[tool.poetry]
name = "code-specialist-example-package"
version = "1.0.6"
description = "Test package"
authors = ["Yannic Schröer"]
packages = [{ include = "example_package" }]


[[tool.poetry.source]]
name = "tebuto"
url = "https://pypi.tebuto.com"

[tool.poetry.dependencies]
python = "3.11"
tebuto-core = {version = "^3.0.0", source = "tebuto"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
